Update README.md
making changes